--- a/case_study_module_5/front_end/home.html
+++ b/case_study_module_5/front_end/home.html
@@ -34,7 +34,7 @@
         </div>
     </div>
     <div class="row sticky-top" style="height: 10%">
-        <div class="col-xl-8 " style="background-color: #0d6056;padding-top: 5px">
+        <div class="col-xl-12 " style="background-color: #0d6056;padding-top: 5px">
             <ul class="nav  justify-content-center">
                 <li class="nav-item">
                     <a class="nav-link active" style="color: white" aria-current="page" href="#">Home</a>
@@ -53,15 +53,7 @@
                 </li>
             </ul>
         </div>
-        <div class="col-xl-4" style="background-color: #0d6056;padding-top: 10px">
-            <form class="d-flex" role="search" action="">
-                <input style="height: 80%" class="form-control me-2" type="search" placeholder="Search"
-                       aria-label="Search" name="search">
-                <button  class="btn btn-outline-success" type="submit"
-                         style="background-color: #5c636a;height: 80%;border: 2px solid yellow;color: white">Search
-                </button>
-            </form>
-        </div>
+
     </div>
     <div class="row" style="height: 70%">
         <div class="col-xl-2">
@@ -155,8 +147,12 @@
                 accusamus autem beatae commodi eligendi et eum iste laboriosam minima, nisi officia optio porro tenetur
                 voluptas!</p>
         </div>
-
-        <div class="row" style="background-color: #0d6056;height: 10%">
+            <footer class="#00695C text-center text-white">
+                <div class="text-center p-3" style="background-color: #00695C">
+                    © 2020 Copyright:
+                    <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+                </div>
+            </footer>
 
         </div>
     </div>
